<resources>
    <string name="app_name">Prova</string>
    <string name="a_newsleter_que_traz_os_melhores_conteudos_do_estado_sobre_vida_saud_vel_increva_se_para_receber_por_e_mail">A newsleter que traz os melhores conteudos do Estado sobre vida saudável; increva-se para receber por e-mail</string>
    <string name="_15_31">15:31</string>
    <string name="sa_de_bem_estar"><![CDATA[SAÚDE & BEM-ESTAR]]></string>
    <string name="estad_o">Estadão</string>
    <string name="_15_31r">15:31</string>
    <string name="estad_oo">Estadão</string>
    <string name="eliane_cantanh_de">ELIANE CANTANHÊDE</string>
    <string name="_15_31s">15:31</string>
    <string name="quot_bolsonaro_na_onu_ataca_lula_e_fala_maravilha_do_seu_governo_mas_n_o_muda_votos_no_brasil_quot_leia_coluna">\"Bolsonaro na ONU ataca Lula e fala maravilha do seu governo, mas não muda votos no Brasil\"; leia coluna</string>
    <string name="estad_ot">Estadão</string>
    <string name="bolsonaro_insiste_em_dados_enganosos_sobre_petrobras_meio_ambiente_e_economia_em_discurso_na_onu_veja_checagem_ponto_a_ponto">Bolsonaro insiste em dados enganosos sobre Petrobras, meio ambiente e economia em discurso na ONU; veja checagem ponto a ponto</string>
    <string name="_15_31t">15:31</string>
    <string name="estad_o_verifica">ESTADÃO VERIFICA</string>
    <string name="desabamento_em_empresa_deixa_ao_menos_cinco_mortos_em_itapecerica_da_serra_funcion_rios_participavam_de_reuni_o_com_candidatos_a_deputado">Desabamento em empresa deixa ao menos cinco mortos em Itapecerica da Serra; funcionários participavam de reunião com candidatos a deputado</string>
    <string name="_15_31u">15:31</string>
    <string name="estad_oi">Estadão</string>
    <string name="desastre_na_grande_sp">DESASTRE NA GRANDE SP</string>
    <string name="estad_op">Estadão</string>
    <string name="a_saga_de_eike_batista">A SAGA DE EIKE BATISTA</string>
    <string name="_15_31l">15:31</string>
    <string name="ex_bilion_rio_tenta_superar_seu_inferno_financeiro_e_criminal_saiba_como_ele_vive_hoje">Ex-bilionário tenta superar seu inferno financeiro e criminal; saiba como ele vive hoje</string>
    <string name="ver_maiss">VER MAIS</string>
    <string name="ver_maisl">VER MAIS</string>
    <string name="ver_maisk">VER MAIS</string>
    <string name="ver_maism">VER MAIS</string>
    <string name="ver_maisb">VER MAIS</string>
    <string name="os_idosos_precisam_de_um_cuidado_especial_com_foco_na_ingest_o_de_l_quidos_por_quest_es_pr_prias_da_velhice_tendem_a_sentir_menos_sede_e_com_isso_muitos_deixam_de_beber_a_quantidade_de_gua_necess_ria_para_repor_os_l_quidos_ao_longo_do_dia">Os idosos precisam de um cuidado especial com foco na ingestão de líquidos. Por questões próprias da velhice, tendem a sentir menos sede e, com isso, muitos deixam de beber a quantidade de água necessária para repor os líquidos ao longo do dia</string>
    <string name="_3_cuidados_especiais_na_longevidade">3 - Cuidados especiais na longevidade</string>
    <string name="a_reposi_o_de_l_quidos_essencial_para_manter_a_sa_de_e_as_fun_es_b_sicas_do_organismo_promover_s_ntese_proteica_e_crescimento_muscular_regular_a_temperatura_corporal_desintoxicar_o_organismo_levando_embora_metab_litos_indesej_veis_pela_urina_absorver_e_transportar_os_nutrientes_al_m_de_auxiliar_no_emagrecimento">A reposição de líquidos é essencial para manter a saúde e as funções básicas do organismo, promover síntese proteica e crescimento muscular, regular a temperatura corporal, desintoxicar o organismo, levando embora metabólitos indesejáveis pela urina, absorver e transportar os nutrientes, além de auxiliar no emagrecimento.</string>
    <string name="_2_alimenta_o_e_hidrata_o">2 - Alimentação e hidratação</string>
    <string name="nos_dias_quentes_tendemos_a_ficar_mais_expostos_aos_raios_solares_sob_o_sol_aumentam_os_riscos_de_queimaduras_c_ncer_de_pele_e_de_envelhecimento_precoce_da_pele_por_isso_preciso_investir_na_hidrata_o_ingerindo_bastante_l_quido_o_uso_do_protetor_solar_torna_se_ainda_mais_obrigat_rio_prefira_os_com_fps_30_ou_superior_e_com_prote_o_uva_e_uvb_aplicando_a_cada_duas_horas">Nos dias quentes, tendemos a ficar mais expostos aos raios solares. Sob o Sol, aumentam os riscos de queimaduras, câncer de pele e de envelhecimento precoce da pele. Por isso, é preciso investir na hidratação, ingerindo bastante líquido. O uso do protetor solar torna-se ainda mais obrigatório (prefira os com FPS 30 ou superior e com proteção UVA e UVB, aplicando a cada duas horas).</string>
    <string name="_1_pele">1 - Pele</string>
    <string name="newsletter_vida_simples">Newsletter Vida Simples</string>
    <string name="enviamos_toda_quarta_feira_de_manh_uma_sele_o_com_os_melhores_conte_dos_publicados_no_portal_vida_simples_diretamente_por_e_mail_alimenta_o_hidrata_o_prote_o_da_pele_e_dos_cabelos_veja_dicas_para_ficar_bem_quando_est_calor">Enviamos toda quarta-feira de manhã uma seleção com os melhores conteúdos publicados no portal Vida Simples diretamente por e-mail. Alimentação, hidratação, proteção da pele e dos cabelos: veja dicas para ficar bem quando está calor.</string>
    <string name="VER_MAISS">VER MAIS</string>
    <string name="desabamento_em_itapecerica_da_serra_deixa_9_mortos_e_28_feridos">Desabamento em Itapecerica da Serra deixa 9 mortos e 28 feridos</string>
    <string name="de_acordo_com_a_major_dos_bombeiros_luciana_soares_cerca_de_64_trabalhadores_estavam_em_uma_reuni_o_no_audit_rio_de_um_galp_o_da_empresa_quando_a_laje_desabou_a_rea_tem_10_mil_metros_quadrados_em_nota_a_empresa_multiteiner_lamentou_o_acidente_e_disse_que_todos_foram_surpreendidos_pelo_rompimento_da_estrutura_que_tem_a_causa_desconhecida_quot_informamos_que_todas_as_medidas_est_o_sendo_adotadas_para_apurar_e_esclarecer_todo_o_ocorrido_contudo_neste_momento_estamos_priorizando_o_apoio_e_assist_ncia_aos_nossos_colaboradores_e_aos_seus_familiares_entraremos_em_contato_com_todas_as_fam_lias_e_tamb_m_gostar_amos_de_disponibilizar_um_canal_de_contato_atrav_s_do_email_centraldeapoio_multiteiner_com_br_quot">De acordo com a major dos bombeiros Luciana Soares, cerca de 64 trabalhadores estavam em uma reunião no auditório de um galpão da empresa, quando a laje desabou. A área tem 10 mil metros quadrados. Em nota, a empresa Multiteiner lamentou o acidente e disse que todos foram surpreendidos pelo rompimento da estrutura, que tem a causa desconhecida. \"Informamos que todas as medidas estão sendo adotadas para apurar e esclarecer todo o ocorrido, contudo, neste momento, estamos priorizando o apoio e assistência aos nossos colaboradores e aos seus familiares. Entraremos em contato com todas as famílias e também gostaríamos de disponibilizar um canal de contato através do email centraldeapoio@multiteiner.com.br\".</string>
    <string name="mais_de_15_viaturas_foram_acionadas_para_o_local_por_volta_das_9h_al_m_de_unidades_de_resgate_do_servi_o_de_atendimento_m_vel_de_urg_ncia_samu_e_equipes_da_defesa_civil_de_itapecerica_da_serra_e_tabo_o_da_serra_por_volta_das_16h_os_bombeiros_informaram_que_foram_encerradas_as_buscas">Mais de 15 viaturas foram acionadas para o local por volta das 9h, além de unidades de resgate do Serviço de Atendimento Móvel de Urgência (Samu) e equipes da Defesa Civil de Itapecerica da Serra e Taboão da Serra. Por volta das 16h, os bombeiros informaram que foram encerradas as buscas.</string>
</resources>