<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:text="@string/desabamento_em_itapecerica_da_serra_deixa_9_mortos_e_28_feridos"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="440dp"
        android:layout_height="218dp"
        app:srcCompat="@drawable/desabamento"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/de_acordo_com_a_major_dos_bombeiros_luciana_soares_cerca_de_64_trabalhadores_estavam_em_uma_reuni_o_no_audit_rio_de_um_galp_o_da_empresa_quando_a_laje_desabou_a_rea_tem_10_mil_metros_quadrados_em_nota_a_empresa_multiteiner_lamentou_o_acidente_e_disse_que_todos_foram_surpreendidos_pelo_rompimento_da_estrutura_que_tem_a_causa_desconhecida_quot_informamos_que_todas_as_medidas_est_o_sendo_adotadas_para_apurar_e_esclarecer_todo_o_ocorrido_contudo_neste_momento_estamos_priorizando_o_apoio_e_assist_ncia_aos_nossos_colaboradores_e_aos_seus_familiares_entraremos_em_contato_com_todas_as_fam_lias_e_tamb_m_gostar_amos_de_disponibilizar_um_canal_de_contato_atrav_s_do_email_centraldeapoio_multiteiner_com_br_quot"
        android:textAlignment="center"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="302dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mais_de_15_viaturas_foram_acionadas_para_o_local_por_volta_das_9h_al_m_de_unidades_de_resgate_do_servi_o_de_atendimento_m_vel_de_urg_ncia_samu_e_equipes_da_defesa_civil_de_itapecerica_da_serra_e_tabo_o_da_serra_por_volta_das_16h_os_bombeiros_informaram_que_foram_encerradas_as_buscas"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="526dp" />
</androidx.constraintlayout.widget.ConstraintLayout>